--- a/trunkGiuaSwitchVaRouter.yml
+++ b/trunkGiuaSwitchVaRouter.yml
@@ -15,12 +15,12 @@
         mode: access
         access_vlan: "{{ item.vlan }}"
       with_items:
-        - { vlan: "10", int: "e0/2"}
-        - { vlan: "20", int: "e0/3"}
+        - { vlan: "10", int: "Ethernet0/2"}
+        - { vlan: "20", int: "Ethernet0/3"}
     - name: chuyen cong e0/1 sang mode trunk
       ios_config:
         parents:
-          - int e0/1
+          - int Ethernet0/1
         lines:
           - sw trunk en dot1Q
           - sw mode trunk
@@ -44,8 +44,8 @@
           - encapsulation dot1Q {{item.vlan}}
           - ip address 192.168.{{item.vlan}}.1 255.255.255.0
       with_items:
-        - { subint: fastEthernet0/1.10 , vlan: 10 }
-        - { subint: fastEthernet0/1.20 , vlan: 20 }
+        - { subint: Ethernet0/1.10 , vlan: 10 }
+        - { subint: Ethernet0/1.20 , vlan: 20 }
 
     - name: Show ip
       ios_command:
