--- a/trunkGiuaSwitchVaRouter.yml
+++ b/trunkGiuaSwitchVaRouter.yml
@@ -33,7 +33,7 @@
   tasks:
     - name: Dat ip cho cong e0/1
       ios_l3_interface:
-        name: e0/1
+        name: Ethernet0/1
         ipv4: 192.168.1.1/24
 
     - name: dat ip subinterface
