--- a/trunkGiuaSwitchVaRouter.yml
+++ b/trunkGiuaSwitchVaRouter.yml
@@ -32,9 +32,12 @@
 
   tasks:
     - name: Dat ip cho cong e0/1
-      ios_l3_interface:
-        name: Ethernet0/1
-        ipv4: 192.168.1.1/24
+      ios_config:
+        parents:
+          name: int Ethernet0/1
+        lines:
+          - no shutdown
+          - ip address 192.168.1.1 255.255.255.0
 
     - name: dat ip subinterface
       ios_config:
