--- a/trunkGiuaSwitchVaRouter.yml
+++ b/trunkGiuaSwitchVaRouter.yml
@@ -34,7 +34,7 @@
     - name: Dat ip cho cong e0/1
       ios_config:
         parents:
-          name: int Ethernet0/1
+          - int Ethernet0/1
         lines:
           - no shutdown
           - ip address 192.168.1.1 255.255.255.0
