--- a/trunkGiuaSwitchVaRouter.yml
+++ b/trunkGiuaSwitchVaRouter.yml
@@ -9,14 +9,23 @@
         aggregate:
           - { vlan_id : 10 }
           - { vlan_id : 20 }
-    - name: gan cong vao vlan
-      ios_l2_interface:
-        name: "{{ item.int }}"
-        mode: access
-        access_vlan: "{{ item.vlan }}"
-      with_items:
-        - { vlan: "10", int: "Ethernet0/2"}
-        - { vlan: "20", int: "Ethernet0/3"}
+          
+    - name: gan cong vao vlan 10
+      ios_config:
+        parents:
+          - int e0/2
+        lines:
+          - switchport mode access
+          - switchport access vlan 10
+          
+     - name: gan cong vao vlan 20
+      ios_config:
+        parents:
+          - int e0/3
+        lines:
+          - switchport mode access
+          - switchport access vlan 20
+        
     - name: chuyen cong e0/1 sang mode trunk
       ios_config:
         parents:
@@ -24,7 +33,6 @@
         lines:
           - sw trunk en dot1Q
           - sw mode trunk
-#        match: strict
 
 - name: Cau hinh tren router
   hosts: R1
@@ -34,7 +42,7 @@
     - name: Dat ip cho cong e0/1
       ios_config:
         parents:
-          - int Ethernet0/1
+          - int e0/1
         lines:
           - no shutdown
           - ip address 192.168.1.1 255.255.255.0
