--- a/trunkGiuaSwitchVaRouter.yml
+++ b/trunkGiuaSwitchVaRouter.yml
@@ -24,12 +24,12 @@
           - int e0/2
         lines:
           - switchport mode access
-          - switchport access vlan 10
+          - switchport access vlan 20
         
     - name: chuyen cong e0/1 sang mode trunk
       ios_config:
         parents:
-          - int Ethernet0/1
+          - int e0/1
         lines:
           - sw trunk en dot1Q
           - sw mode trunk
