--- a/trunkGiuaSwitchVaRouter.yml
+++ b/trunkGiuaSwitchVaRouter.yml
@@ -10,32 +10,21 @@
           - { vlan_id : 10 }
           - { vlan_id : 20 }
           
-    #- name: gan cong vao vlan 10
-    #  ios_config:
-    #    parents:
-    #      - int e0/2
-    #    lines:
-    #      - switchport mode access
-    #      - switchport access vlan 10
-          
-    #- name: gan cong vao vlan 20
-    #  ios_config:
-    #    parents:
-    #      - int e0/3
-    #    lines:
-    #      - switchport mode access
-    #      - switchport access vlan 20
-          
-    - name: gan cong vao vlan 10,20
+    - name: gan cong vao vlan 10
       ios_config:
         parents:
-          - int {{ item.int }}
+          - int e0/2
         lines:
           - switchport mode access
-          - switchport access {{ item.vlan }}
-      with_items:
-       - { int: "Ethernet0/2" , vlan: "10" }
-       - { int: "Ethernet0/3" , vlan: "20" }
+          - switchport access vlan 10
+          
+    - name: gan cong vao vlan 20
+      ios_config:
+        parents:
+          - int e0/3
+        lines:
+          - switchport mode access
+          - switchport access vlan 20
         
     - name: chuyen cong e0/1 sang mode trunk
       ios_config:
